// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextInput /> component its snapshot matches story Default 1`] = `
<div>
  <div
    class="cds--form-item cds--text-input-wrapper"
  >
    <label
      class="cds--label"
      for="some_id"
    >
      A text field (optional)
    </label>
    <div
      class="cds--text-input__field-outer-wrapper"
    >
      <div
        class="cds--text-input__field-wrapper"
      >
        <input
          class="cds--text-input cds--text__input cds--text-input--md"
          id="some_id"
          name="some_name"
          placeholder="Username"
          title="Username"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> component its snapshot matches story OnFieldPanel 1`] = `
.c0 {
  background-color: #f4f4f4;
}

.c1 {
  margin-bottom: 1.5rem;
  padding: 1rem;
}

.c2 {
  font-weight: bold;
  margin-bottom: 1rem;
}

<div>
  <div
    class="c0"
  >
    <div
      class="cds--layer-two c1"
    >
      <div
        class="c2"
      >
        A fieldpanel
      </div>
      <div
        class="cds--form-item cds--text-input-wrapper"
      >
        <label
          class="cds--label"
          for="some_id"
        >
          A text field (optional)
        </label>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input cds--text__input cds--text-input--md"
              id="some_id"
              name="some_name"
              placeholder="Username"
              title="Username"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> component its snapshot matches story Password 1`] = `
<div>
  <div
    class="cds--form-item cds--text-input-wrapper cds--password-input-wrapper"
  >
    <label
      class="cds--label"
      for="some_id"
    >
      A text field (optional)
    </label>
    <div
      class="cds--text-input__field-outer-wrapper"
    >
      <div
        class="cds--text-input__field-wrapper"
      >
        <input
          class="cds--text-input cds--password-input cds--text-input--md"
          data-toggle-password-visibility="true"
          id="some_id"
          name="some_name"
          type="password"
          value=""
        />
        <button
          class="cds--text-input--password__visibility__toggle cds--btn cds--btn--icon-only cds--tooltip__trigger cds--tooltip--a11y cds--tooltip--bottom cds--tooltip--align-center"
          type="button"
        >
          <span
            class="cds--assistive-text"
          >
            Show password
          </span>
          <svg
            aria-hidden="true"
            class="cds--icon-visibility-on"
            fill="currentColor"
            focusable="false"
            height="16"
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M15.5,7.8C14.3,4.7,11.3,2.6,8,2.5C4.7,2.6,1.7,4.7,0.5,7.8c0,0.1,0,0.2,0,0.3c1.2,3.1,4.1,5.2,7.5,5.3 c3.3-0.1,6.3-2.2,7.5-5.3C15.5,8.1,15.5,7.9,15.5,7.8z M8,12.5c-2.7,0-5.4-2-6.5-4.5c1-2.5,3.8-4.5,6.5-4.5s5.4,2,6.5,4.5 C13.4,10.5,10.6,12.5,8,12.5z"
            />
            <path
              d="M8,5C6.3,5,5,6.3,5,8s1.3,3,3,3s3-1.3,3-3S9.7,5,8,5z M8,10c-1.1,0-2-0.9-2-2s0.9-2,2-2s2,0.9,2,2S9.1,10,8,10z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> component its snapshot matches story TestOnForm 1`] = `
<div>
  <div>
    <div>
      <div>
        react-hook-form
      </div>
      <div
        style="display: flex; justify-content: space-between;"
      >
        <div>
          <div
            class="cds--form-item cds--text-input-wrapper"
          >
            <label
              class="cds--label"
              for="field"
            >
              A text field (optional)
            </label>
            <div
              class="cds--text-input__field-outer-wrapper"
            >
              <div
                class="cds--text-input__field-wrapper"
              >
                <input
                  class="cds--text-input cds--text__input cds--text-input--md"
                  id="field"
                  name="field"
                  placeholder="Username"
                  title="Username"
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
        </div>
        <div
          style="width: 25%; padding: 1rem; background: rgb(238, 238, 238);"
        >
          <div>
            "Some value"
          </div>
          <div
            style="margin-top: 1rem;"
          >
            <input
              id="formData"
              style="padding: 0.5rem;"
              type="text"
            />
            <button
              style="padding: 0.5rem;"
            >
              Set
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      style="margin-top: 2rem;"
    >
      <div>
        as standalone field
      </div>
      <div
        style="display: flex; justify-content: space-between;"
      >
        <div>
          <div
            class="cds--form-item cds--text-input-wrapper"
          >
            <label
              class="cds--label"
              for="field"
            >
              A text field (optional)
            </label>
            <div
              class="cds--text-input__field-outer-wrapper"
            >
              <div
                class="cds--text-input__field-wrapper"
              >
                <input
                  class="cds--text-input cds--text__input cds--text-input--md"
                  id="field"
                  name="some_name"
                  placeholder="Username"
                  title="Username"
                  type="text"
                  value="Some value"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          style="width: 25%; padding: 1rem; background: rgb(238, 238, 238);"
        >
          <div>
            "Some value"
          </div>
          <div
            style="margin-top: 1rem;"
          >
            <input
              id="sData"
              style="padding: 0.5rem;"
              type="text"
            />
            <button
              style="padding: 0.5rem;"
            >
              Set
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> component its snapshot matches story WithError 1`] = `
<div>
  <div
    class="cds--form-item cds--text-input-wrapper"
  >
    <label
      class="cds--label"
      for="some_id"
    >
      A text field (optional)
    </label>
    <div
      class="cds--text-input__field-outer-wrapper"
    >
      <div
        class="cds--text-input__field-wrapper"
        data-invalid="true"
      >
        <svg
          aria-hidden="true"
          class="cds--text-input__invalid-icon"
          fill="currentColor"
          focusable="false"
          height="16"
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8,1C4.2,1,1,4.2,1,8s3.2,7,7,7s7-3.1,7-7S11.9,1,8,1z M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2 c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
          />
          <path
            d="M7.5,4h1v5h-1C7.5,9,7.5,4,7.5,4z M8,12.2c-0.4,0-0.8-0.4-0.8-0.8s0.3-0.8,0.8-0.8 c0.4,0,0.8,0.4,0.8,0.8S8.4,12.2,8,12.2z"
            data-icon-path="inner-path"
            opacity="0"
          />
        </svg>
        <input
          aria-describedby="some_id-error-msg"
          aria-invalid="true"
          class="cds--text-input cds--text__input cds--text-input--invalid cds--text-input--md"
          data-invalid="true"
          id="some_id"
          name="some_name"
          placeholder="Username"
          title="Username"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds--form-requirement"
        id="some_id-error-msg"
      >
        Some error text
      </div>
    </div>
  </div>
</div>
`;

exports[`<TextInput /> component its snapshot matches story WithHelpText 1`] = `
<div>
  <div
    class="cds--form-item cds--text-input-wrapper"
  >
    <label
      class="cds--label"
      for="some_id"
    >
      A text field (optional)
    </label>
    <div
      class="cds--text-input__field-outer-wrapper"
    >
      <div
        class="cds--text-input__field-wrapper"
      >
        <input
          aria-describedby="some_id-helper-text"
          class="cds--text-input cds--text__input cds--text-input--md"
          id="some_id"
          name="some_name"
          placeholder="Username"
          title="Username"
          type="text"
          value=""
        />
      </div>
      <div
        class="cds--form__helper-text"
        id="some_id-helper-text"
      >
        Some help text
      </div>
    </div>
  </div>
</div>
`;
